
ChangeLog
 [ + added, - removed, * changed ]

 * 01Aug2011 Added instrumentation of MPI_Get and MPI_Put
 * 29Jun2011 Modified SVN propset using
              svn propset svn:keywords "Date Revision Author HeadURL Id"

   * (29/Jun/2011) Added extrae_version.h to track in extrae_user_events.h the
                   current version of the instrumentation package
   * (23/Jun/2011) mpi_ping examples now accept > 2 processes 
   * (20/Jun/2011) Optimized initialization of mpimpi2prv when loading a large
                   number of files using a large number of processes.
   * (10/Jun/2011) Improved CUDA support
   * (07/Jun/2011) BG/P fails to execute PAPI_read in PAPI_read when using time
                   sampling (fixed by additional logic & avoiding read inside).
   * (07/Jun/2011) --sort-addresses is enabled by default
   * (07/Jun/2011) Fixed emitting flush events in between multiple events
                   through routines Backend_Enter_Instrumentation and
                   Backend_Leave_Instrumentation. This should avoid most
                   Skipping state with negative duration messages at mpi2prv.
   * (07/Jun/2011) Fixed hwc set change when mixing changeat-time and
                   changeat-globalops within the XML config file
   * (07/Jun/2011) Linux/amd64 can rely on libc to call backtrace instead of
                   requiring libunwind
   + (02/Jun/2011) Added initial (& very limited) CUDA instrumentation (through --enable-cuda)
   * (30/May/2011) Added time sampling capabilities (doc, xml, and source changes)
   * (02/May/2011) Honor $DESTDIR in make install
   + (15/Apr/2011) Import initial sampling support based on alarm (2).
   + (05/Apr/2011) Additional support for pthread library
   * (31/Mar/2011) Fix for matching user communications in merger.
   * (28/Mar/2011) Support for XL -qdebug=function_trace
   * (23/Mar/2011) Several fixes to revive CBEA support
   * (22/Mar/2011) Increase buffer size to 500k elements